--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "datatables.net-bs5": "^2.2.1",
     "datatables.net-dt": "^2.2.1",
     "jquery": "^3.7.1",
+    "ng2-currency-mask": "^13.0.3",
     "ngx-mask": "^19.0.6",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
